updates on home page and created files for other pages

--- a/html/index.html
+++ b/html/index.html
@@ -9,16 +9,19 @@
          <link rel="icon" href="../images/autism.png"/>
          <script src="../js/header_footer.js"></script>
          <link rel="stylesheet" href="../css/style.css" type="text/css" media="all">
+         <link rel="stylesheet" href="../css/home-page-style.css" type="text/css" media="all">
     </head>
   
     <body>
-         <header id='header'>
+         <header id="header">
               <!--jscode-->
          </header>
 
          <nav class="menu-nav">
           <div class="menu">
-               <a href="index.html"><span class="current-page">Home</span></a>
+               <a href="index.html">
+                    <span class="current-page">Home</span>
+               </a>
                <a href="about.html">About</a>
                <a href="curriculum.html">Curriculum</a>
                <a href="parents.html">Parents</a>
@@ -26,11 +29,85 @@
            </div>
          </nav>
 
-         <secton>
+         <section>
+              <div class="main-background-div">
+                   <img src="../images/main-background.PNG" alt="A child in school">
+              </div>
+              <div class="offers-div">
+                   <div>
+                        <h3><abbr title="Helios Autism School">HAS</abbr> Trainings</h3>
+                         <p>
+                              Explore our Professional Development Programmes and discover brand new modules.
+                         </p>
+                   </div>
+                   <div>
+                         <h3>Therapy</h3>
+                         <p>
+                              Explore our Professional Development Programmes and discover brand new modules.
+                         </p>
+                    </div>
+                    <div>
+                         <h3>Other benefits</h3>
+                          <p>
+                              Explore our Professional Development Programmes and discover brand new modules.
+                          </p>
+                    </div>
+              </div>
+         </section>
 
-         </secton>
+         <section class="events-section">
+               <h2>Upcoming Events</h2>
+               <div class="events-container">
+                    <div class="event-div">
+                         <div class="event-date">18<br>December</div>
+                         <div>
+                              <dl>
+                                   <dt>Interviews</dt>
+                                        <dd>- interview with Dr. Prof. Rudolf Kanol</dd>
+                                   <dt>Activities</dt>
+                                        <dd>- outdoor activities</dd>
+                              </dl>
+                         </div>
+                    </div>
+                    <div class="event-div">
+                         <div class="event-date">28<br>December</div>
+                         <div>
+                              <ul>
+                                   <li>Research on the topic of psychology</li>
+                                   <li>Methodologies to be used:
+                                        <ol>
+                                             <li>Survey</li>
+                                             <li>Questionaries</li>
+                                        </ol>
+                                   </li>
+                                   <li>Analyze results</li>
+                              </ul>
+                         </div>
+                    </div>
+               </div>    
+         </section>
+
+         <section class="academic-section">
+              <h1>Academic Network</h4>
+              <table>
+                   <tr>
+                        <th colspan="3">Our pioneering role is based on our close cooperation in training and further education with leading universities.
+                        </th>
+                   </tr>
+                   <tr>
+                        <td><a href="https://www.harvard.edu/" target="_blank">Harvard University</a></td>
+                        <td><a href="https://www.stanford.edu/" target="_blank">Stanford University</a></td>
+                        <td><a href="https://www.ox.ac.uk/" target="_blank">University of Oxford</a></td>
+                   </tr>
+                   <tr>
+                        <td><a href="https://www.columbia.edu/" target="_blank">Columbia University</a></td>
+                        <td><a href="https://umich.edu/" target="_blank">University of Michigan</a></td>
+                        <td><a href="https://www.cam.ac.uk/" target="_blank">University of Cambridge</a></td>
+                   </tr>
+               </table>
+         </section>
          
-         <footer id='footer'>
+         <footer id="footer">
               <!--jscode-->
          </footer>
     </body>
