Added&finished menu Achievements and worked on contact

--- a/html/index.html
+++ b/html/index.html
@@ -26,6 +26,7 @@
                <a href="curriculum.html">Curriculum</a>
                <a href="parents.html">Parents</a>
                <a href="contact.html">Contact</a>
+               <a href="achievements.html">Achievements</a>
            </div>
          </nav>
 
