--- a/html/parents.html
+++ b/html/parents.html
@@ -24,6 +24,7 @@
                <a href="curriculum.html">Curriculum</a>
                <a href="parents.html"><span class="current-page">Parents</span></a>
                <a href="contact.html">Contact</a>
+               <a href="achievements.html">Achievements</a>
            </div>
          </nav>
          
