--- a/html/curriculum.html
+++ b/html/curriculum.html
@@ -24,6 +24,7 @@
                <a href="curriculum.html"><span class="current-page">Curriculum</span></a>
                <a href="parents.html">Parents</a>
                <a href="contact.html">Contact</a>
+               <a href="achievements.html">Achievements</a>
            </div>
          </nav>
          
