Worked on parents and some changes in curriculum

--- a/html/parents.html
+++ b/html/parents.html
@@ -27,9 +27,75 @@
            </div>
          </nav>
          
-
-   
         <!--ADD CODE-->
+
+        <div class="body">
+             <div class="wrapper">
+                  <div class="title">
+                       <h2>A word from our parents</h2>
+                       <h6>☀️☀️☀️☀️☀️</h6>
+                  </div>
+                  <div class="box">
+                       <p>
+                            " Helios Autism is a wonderful school that my daughter has the privilege of attending.
+                            Their emphasis is always on the welfare of the child not the curriculum unlike some
+                            other schools/organizations. Helios demostrates a unique understanding of this growing
+                            population. Their commitment to learning is a wonderfully evolving philosophy that they
+                            actually make a reality instead of just talking about it. And as a parent, I can only
+                            say I am thrilled that my child has the opportunity to be a part of it."
+                         </p>
+                            <p align="right"> - filan fisteku</p>   
+                  </div>
+                  <div class="box">
+                       <p>
+                            " I have been a parent of a Helios student for 7 years and they are continually impressing
+                            me every year. Their curriculum has been modified to my child's needs and has past every
+                            expectation and more that i want from a school. They have been able to coordinate his 
+                            therapies through out the school day which alleviate extra stress on my son and me. I look
+                            forward to the many more accomplishments Helios will achieve through out my sons time at 
+                            the school."
+                       </p>
+                       <p align="right"> - **********</p>
+                  </div>
+                  <div class="box">
+                    <p>
+                         " My children are on their second year at Helios and they are so happy and eager to go to school
+                         every morning. I recommend this school to other parents looking for a safe and nurturing place 
+                         to have their special needs."
+                    </p>
+                    <p align="right"> - **********</p>
+               </div>
+               <div class="box">
+                    <p>
+                       " Words can't express how overjoyed I am with having my child in Helios! After all the research I 
+                       did prior to putting him in the school, it felt as if it were too good to be true! But it's not!
+                       Everyday he goes to school in Helios is a blessing. this school has filled our hearts with hope!
+                       you will find that everyone in Helios is ther because it's their passion in wanting to make a 
+                       difference! And they have, in our lives! I will be firever greatfull for this gem of a school. "  
+                    </p>
+                    <p align="right"> - **********</p>
+               </div>
+               <div class="box">
+                    <p>
+                         " When my son has been diagnosed with autism over a year ago i had no idea what to expect or 
+                         what to do because autism was something I read about and heard about but never truly understood.
+                         And when it came to my son I wanted the best school, the best teachers and the best therapists
+                         to help him reach his highest potential - that's when I began my research. I went to visit schools 
+                         and none of them really made an impact on me, they were over crowded and I didn't feel a personal
+                         connection in any of them. Then I found Helios and right away I emailed them and asked a million 
+                         questions and Mrs.***** always replied! We set up a tour of the school and I was shown around and 
+                         when I met the principal I knew I had found the right place for my son. When she spoke to me about 
+                         the school I felt her passion behind all her words and I automatically signed him up! Words cannot 
+                         explain how grateful I am thatmy son continues to suprise me every single day and I honestly owe it
+                         to this school & its amazing staff & the amazing curriculum that engages all the children in the way
+                         that is best for them. "
+                    </p> 
+                    <p align="right"> - **********</p>
+               </div>
+             </div>
+
+        </div>
+
 
 
 
