--- a/html/about.html
+++ b/html/about.html
@@ -24,6 +24,7 @@
                <a href="curriculum.html">Curriculum</a>
                <a href="parents.html">Parents</a>
                <a href="contact.html">Contact</a>
+              <a href="achievements.html">Achievements</a>
            </div>
          </nav>
          
