Added a video and some small changes

--- a/html/about.html
+++ b/html/about.html
@@ -61,10 +61,10 @@
                               <div class="intro-div" id="introduction">
                                    <h1>About us</h1>
                                    <p>
-                                        Helios Autism School opened its doors in 2017 in East Harlem. We expanded our footprint with a second school in Fall 2017 in NYC.
+                                        Helios Autism School opened its doors in 2017 in <span id="place"></span>. We expanded our footprint with a second school in Fall 2017 in NYC.
                                         Our curriculum is a customizable educational tool that adapts to the various abilities of each student. It incorporates visual cues and teaching based on applied behavior analysis to facilitate the learning capability of our children and thus enhance results.
                                         <br>
-                                        I addition all students are assessed and screened with the BRIGANCE instructional tool to ensure our team of teachers and therapist have a full vision of the needs of our students.
+                                        In addition all students are assessed and screened with the BRIGANCE instructional tool to ensure our team of teachers and therapist have a full vision of the needs of our students.
                                    </p>
                                    <ul id="square-ul">
                                         <li>Meet IDEA requirements and address state standards and the Common Core</li>
@@ -83,7 +83,7 @@
                                    It is our commitment to provide outstanding academic, vocational, and functional life programs.
                               </p>
                               <table class="weekly-plan">
-                                   <caption>Weekly plan</caption>
+                                   <caption><b>Weekly plan</b></caption>
                                    <colgroup>
                                         <col span="2">
                                    </colgroup>
@@ -93,7 +93,7 @@
                                              <img src="../images/clock.png" width="20" height="20">
                                         </th>
                                         <th>Activity</th>
-                                        <th>Hours</th>
+                                        <th bgcolor="lightgray">Hours</th>
                                    </tr>
                                    <tr>
                                         <td>Monday</td>
