--- a/html/achievements.html
+++ b/html/achievements.html
@@ -66,7 +66,7 @@
 <br>
         <div class="listing">
      <ul style="list-style-type: circle; text-align: left;">
-          <li ><p>Leadership is not about a title or a designation. It’s about impact, influence, and inspiration. Impact involves getting results, influence is about spreading the passion you have for your work, and you have to inspire team-mates. Without a doubt, Dr. Niyati Chitkara, Principal of Chitkara International School is the most scrupulous leader as it is under her tutelage that every day thousands of minds are inspired and educated. She is indeed a true personification of leadership as she believes in assimilating a powerful value system in the students along with focusing on their academic and co-curricular excellence. For the overall development of the students, she has worked hard to open varied promenades for trailing perfection in talent areas, like Visual & Performing Arts, Sports & Games, and Life Skills, etc. Thus it is in the honour of this distinction that Dr. Chitkara was bestowed with the title ‘Principal Par Excellence’ by leading International Institute of Hotel Management (IIHM). (https://demo.chitkaraschool.in/spotlight/dr-chitkara-was-bestowed-with-the-title-principal-par-excellence-by-leading-international-institute-of-hotel-management-iihm/ )</p></li>
+          <li ><p>Leadership is not about a title or a designation. It’s about impact, influence, and inspiration. Impact involves getting results, influence is about spreading the passion you have for your work, and you have to inspire team-mates. Without a doubt, Dr. Niyati Chitkara, Principal of Chitkara International School is the most scrupulous leader as it is under her tutelage that every day thousands of minds are inspired and educated. She is indeed a true personification of leadership as she believes in assimilating a powerful value system in the students along with focusing on their academic and co-curricular excellence. For the overall development of the students, she has worked hard to open varied promenades for trailing perfection in talent areas, like Visual & Performing Arts, Sports & Games, and Life Skills, etc. Thus it is in the honour of this distinction that Dr. Chitkara was bestowed with the title ‘Principal Par Excellence’ by leading International Institute of Hotel Management (IIHM).</p></li>
      <br><li><p>A teacher is one of the individuals who play a significant role in shaping the future of a child. Teachers are indeed instrumental in community building and helping to make a better society through their inspirational teachings. We are excited to share that Chitkara International School’s founding member, Ms. Kiran, Academic cum Hindi Coordinator, was conferred with ‘Teachers’ Day Award 2019’ by pioneering International Institute of Hotel Management (IIHM). Ms. Kiran was recognised and applauded for being an edifying torchbearer.
           The IIHM Teachers Day Awards 2019 is a unique initiative by the International Hospitality Council, London & Delhi and International Institute of Hotel Management. Over the last 5 years, the event has become most sought after and popular among the educators of the country and is now India’s biggest award. This award certainly merits and symbolises the conscientious Teaching fraternity of Chitkara International School.</p></li>
     <br> <li>Albanian Schools we collaborate<br>
@@ -95,7 +95,7 @@
 <div class="person">
      <img src="../images/person.png" style="width: 75px; height: 75px;">
      <h3>Dua Shala</h3>
-     <p>Mathematician</p>
+     <h6>Mathematician</h6>
      <hr>
      <p> Dua Shala, a student from our school has won a silver medal in EGMO 2021.
           Dua now is studying mathematics in the Massachusets Institute of Technology(MIT) in USA with full schoolarship.
@@ -104,7 +104,7 @@
 <div class="person">
      <img src="../images/person.png" style="height: 75px; width: 75px;" >
      <h3>Suzanah Smith</h3>
-     <p>Mathematician</p>
+     <h6>Mathematician</h6>
      <hr>
      <p> Dua Shala, a student from our school has won a silver medal in EGMO 2021.
           Dua now is studying mathematics in the Massachusets Institute of Technology(MIT) in USA with full schoolarship.
@@ -113,7 +113,7 @@
 <div class="person">
      <img src="../images/person.png" style="width: 75px; height: 75px;">
      <h3>Mathew Scoot</h3>
-     <p>Painter</p>
+     <h6>Painter</h6>
      <hr>
      <p> Mathew, a student from our school has won a silver medal in EGMO 2021.
           Dua now is studying mathematics in the Massachusets Institute of Technology(MIT) in USA with full schoolarship.
@@ -122,7 +122,7 @@
 <div class="person">
      <img src="../images/person.png" style="height: 75px; width: 75px;">
      <h3>Perla Smith </h3>
-     <p>Actor</p>
+     <h6>Actor</h6>
      <hr>
      <p> Perla, a student from our school has won a silver medal in EGMO 2021.
           Dua now is studying mathematics in the Massachusets Institute of Technology(MIT) in USA with full schoolarship.
@@ -131,7 +131,7 @@
 <div class="person">
      <img src="../images/person.png" style="height: 75px; width: 75px;">
      <h3>Wilson Anderson</h3>
-     <p>Engineer</p>
+     <h6>Engineer</h6>
      <hr>
      <p> Wilson, a student from our school has won a silver medal in EGMO 2021.
           Dua now is studying mathematics in the Massachusets Institute of Technology(MIT) in USA with full schoolarship.
