--- a/html/index.html
+++ b/html/index.html
@@ -92,7 +92,8 @@
               <h1>Academic Network</h4>
               <table>
                    <tr>
-                        <th colspan="3">Our pioneering role is based on our close cooperation in training and further education with leading universities.
+                        <th colspan="3">
+                             <i>Our pioneering role is based on our close cooperation in training and further education with leading universities.</i>
                         </th>
                    </tr>
                    <tr>
