--- a/html/parents.html
+++ b/html/parents.html
@@ -34,7 +34,7 @@
              <div class="wrapper">
                   <div class="title">
                        <h2>A word from our parents</h2>
-                       <h6>☀️☀️☀️☀️☀️</h6>
+                       <span>☀️☀️☀️☀️☀️</span>
                   </div>
                   <div class="box">
                        <p>
