--- a/html/curriculum.html
+++ b/html/curriculum.html
@@ -37,13 +37,13 @@
                     to each student, that will enhance the capacity of children under the spectrum of Autism to learn and to maximize 
                     their academic and social potential more effectively. We carry out this mission through a certified faculty, 
                     speech/occupational/physical and applied behavior analysis therapists, small student-teacher ratios,specialized 
-                    visual learning aides, field trips, parent training and support, and individualized educational plans."<h6 align="right">- Our mission</h6></p>
+                    visual learning aides, field trips, parent training and support, and individualized educational plans."<p align="right">- Our mission</p></p>
 
           </div>
           <div class="box2">
                <h1 align="center">Curriculum</h1>
                <p>
-                    The ultimate goal and purpose at Helios is to prepare its student population to emerge as independently as possible 
+                    The ultimate <ins>goal</ins> and purpose at Helios is to prepare its student population to emerge as independently as possible 
                     to meet the challenges of community life. Our curriculum is a customizable educational tool that adapts to the various 
                     abilities of each student. It incorporates visual cues and teaching based on applied behavior analysis to facilitate the 
                     learning capability of our children and thus enhance results.
@@ -73,7 +73,7 @@
           Education standards, like Common Core are not a curriculum. At Helios we use Houghton Mifflin Harcourt® for our 
           curriculum development. In other words, the Common Core is what students need to know and be able to do, and curriculum 
           is how students will learn it. The Common Core State Standards are educational standards for English language arts 
-          (ELA)/literacy and mathematics in grades K-12. In addition, we also use The Unique Learning Curriculum which is also 
+          (ELA)/literacy and mathematics in grades <u>K-12</u>. In addition, we also use The Unique Learning Curriculum which is also 
           aligned with State Standards.
           </p>
           <p>
@@ -81,7 +81,7 @@
           and therapist have a full vision of the needs of our students. Our methods at Helios:
           </p>
           <ul class="a">
-               <li>Meet IDEA requirements and address state standards and the Common Core</li><br>
+               <li>Meet <mark>IDEA</mark> requirements and address state standards and the Common Core</li><br>
                <li>Develop measurable goals and objectives plans for individualized instruction</li><br>
                <li>Monitor student progress and aggregate results across classes, schools, and therapies</li><br>
           </ul>
@@ -93,19 +93,19 @@
 
      <div class="box4">    
      <div class="box41">
-          <p> Nutritional Support </p>
+          <h4> Nutritional Support </h4>
           <img src="../images/activity1.jpg" width="300px" height="150px" alt="">
           <p>“Food for the Brain” Dietary intervention is a cornerstone of a evidence-based medical approach, 
                and there is convincing empirical evidence that special diets help many with autism.</p>
 </div>
 <div class="box42">
-     <p> Music Therapy, Yoga & Dance </p>
+     <h4> Music Therapy, Yoga & Dance </h4>
      <img src="../images/activity2.jpg" width="300px" height="150px" alt="">
      <p>Music therapy intervention serves as an integral component in helping the child with special needs 
           attain educational goals either through direct implementation.</p>
 </div>
 <div class="box43">
-     <p> Summer Camp </p>
+     <h4> Summer Camp </h4>
      <img src="../images/activity3.jpg" width="300px" height="150px" alt="">
      <p>Geared toward development of effective communication skills and peer relationships in a social group 
           setting, while having fun and learning in a safe and accepting environment.</p>
@@ -113,7 +113,7 @@
      </div>
      <div class="box4">    
           <div class="box44">
-               <p> Speech & Language Therapy </p>
+               <h4> Speech & Language Therapy </h4>
                <img src="../images/activity4.jpg" width="300px" height="150px" alt="">
                <p>Children on the autism spectrum often have difficulty understanding the communication of others 
                     and communicating effectively with them. In fact a child on the autism spectrum may not see any 
@@ -121,7 +121,7 @@
                     frustration when they cannot make their needs understood.</p>
      </div>
      <div class="box45">
-          <p> Occupational & Physical Therapy </p>
+          <h4> Occupational & Physical Therapy </h4>
           <img src="../images/activity5.jpg" width="300px" height="150px" alt="">
           <p>Occupational therapy can help children with autism perform better in school and home environments. 
                Parents who are referred to occupational therapy practitioners often have concerns about the behavioral 
@@ -129,7 +129,7 @@
                can assist with these issues.</p>
      </div>
      <div class="box46">
-          <p> Aromatherapy </p>
+          <h4> Aromatherapy </h4>
           <img src="../images/activity6.jpg" width="300px" height="150px" alt="">
           <p>Aromatherapy is so effective is the close connection between smell & memory. Associating certain activities, 
                images, or feelings with a certain smell helps the brain to build connections and file away other sensory data. 
