worked on some changes in curriculum and parents

--- a/html/curriculum.html
+++ b/html/curriculum.html
@@ -31,19 +31,10 @@
         <!--ADD CODE-->
        <div class="body">
       <div class="wrapper"> 
-          <div class="box1" >
- 
-               <p> " Helios Autism School offers unique educational plans, individualized 
-                    to each student, that will enhance the capacity of children under the spectrum of Autism to learn and to maximize 
-                    their academic and social potential more effectively. We carry out this mission through a certified faculty, 
-                    speech/occupational/physical and applied behavior analysis therapists, small student-teacher ratios,specialized 
-                    visual learning aides, field trips, parent training and support, and individualized educational plans."<p align="right">- Our mission</p></p>
-
-          </div>
           <div class="box2">
                <h1 align="center">Curriculum</h1>
                <p>
-                    The ultimate <ins>goal</ins> and purpose at Helios is to prepare its student population to emerge as independently as possible 
+                    The ultimate goal and purpose at Helios is to prepare its student population to emerge as independently as possible 
                     to meet the challenges of community life. Our curriculum is a customizable educational tool that adapts to the various 
                     abilities of each student. It incorporates visual cues and teaching based on applied behavior analysis to facilitate the 
                     learning capability of our children and thus enhance results.
@@ -67,7 +58,7 @@
      <div class="box3">
           
           <p>
-          <h3 align="center" bold> What are educational standards? </h3>  <br>
+          <h3 align="center" bold> What are educational standards? </h3><br>
 
           Educational standards are the learning goals for what students should know and be able to do at each grade level. 
           Education standards, like Common Core are not a curriculum. At Helios we use Houghton Mifflin Harcourt® for our 
@@ -77,16 +68,42 @@
           aligned with State Standards.
           </p>
           <p>
-          I addition all students are assessed and screened with the BRIGANCE instructional tool to ensure our team of teachers 
-          and therapist have a full vision of the needs of our students. Our methods at Helios:
+               The curriculum is divided into eight areas which contribute to the development of the key skills, 
+               both academic and personal in order to be successful
           </p>
           <ul class="a">
-               <li>Meet <mark>IDEA</mark> requirements and address state standards and the Common Core</li><br>
-               <li>Develop measurable goals and objectives plans for individualized instruction</li><br>
-               <li>Monitor student progress and aggregate results across classes, schools, and therapies</li><br>
+               <li>English
+                    <ul><br>English is central to our curriculum at Helios School.</ul>
+               </li><br>
+               <li>Mathematics 
+                    <ul> <br>At Helios, pupils are encouraged to develop fluency in the four mathematical operations through practice and repetition,
+                          as well as, knowing the general principles of shapes, space and data, order of operation and algebra.</ul>
+                         </li><br>
+               <li>Science
+                    <ul><br>Science is an important part of the curriculum at Helios School because it helps us to understand the world around us. 
+                         Everything we know about the universe, from how trees reproduce to what an atom is made up of is the result of scientific 
+                         research and experiment.</ul>
+               </li><br>
+               <li>Physical Education (PE)
+                    <ul><br>Within the PE curriculum our school look at developing pupils Fundamental Movement Skills (FMS). FMS skills are 
+                         important because they are the “building blocks” or foundation movements for more complex and specialised skills.</ul>
+               </li><br>
+               <li>Weaving wellbeing
+                    <ul><br>Weaving wellbeing is a Personal, Social, Economic and Health Education (PSHE) program designed to teach children skills
+                         and strategies which develop positive mental health. The skills are based on current research from the field of positive 
+                         psychology.</ul>
+               </li><br>
+               <li>Computing
+                    <ul><br>At Helios School we follow a bespoke computing curriculum broadly based on the National Curriculum. Pupils gain skills 
+                         and knowledge in computer science, information technology (IT) and digital literacy.</ul>
+               </li><br>
+               <li>Food technology
+                    <ul><br>In our specialist food technology room we nurture the all-important life skill of home cooking. For our young pupils, 
+                    we have a weekly cooking club where we explore both sweet and savoury recipes, as well as the children’s own favourite recipes.</ul>
+               </li><br>
           </ul>
 
-          <h2 float="right" display="block" bold>Some of our acitivities</h2>
+          <h2 display="block" bold>Some of our acitivities</h2>
      </div>
 
 
@@ -136,9 +153,6 @@
                Example: We are all aware of the impact of walking into a house that smells of freshly baked cookies.</p>
      </div>
           </div>
-
-
-
      </div>
      </div>
 
