--- a/html/parents.html
+++ b/html/parents.html
@@ -28,7 +28,6 @@
            </div>
          </nav>
          
-        <!--ADD CODE-->
 
         <div class="body">
              <div class="wrapper">
@@ -45,7 +44,7 @@
                             actually make a reality instead of just talking about it. And as a parent, I can only
                             say I am thrilled that my child has the opportunity to be a part of it."
                          </p>
-                            <p align="right"> - filan fisteku</p>   
+                            <p align="right"> - Theo Watts</p>   
                   </div>
                   <div class="box">
                        <p>
@@ -56,7 +55,7 @@
                             forward to the many more accomplishments Helios will achieve through out my sons time at 
                             the school."
                        </p>
-                       <p align="right"> - **********</p>
+                       <p align="right"> - Anna Hunt</p>
                   </div>
                   <div class="box">
                     <p>
@@ -64,7 +63,7 @@
                          every morning. I recommend this school to other parents looking for a safe and nurturing place 
                          to have their special needs."
                     </p>
-                    <p align="right"> - **********</p>
+                    <p align="right"> - Bruno West</p>
                </div>
                <div class="box">
                     <p>
@@ -74,7 +73,7 @@
                        you will find that everyone in Helios is ther because it's their passion in wanting to make a 
                        difference! And they have, in our lives! I will be firever greatfull for this gem of a school. "  
                     </p>
-                    <p align="right"> - **********</p>
+                    <p align="right"> - Elizabeth Potts</p>
                </div>
                <div class="box">
                     <p>
@@ -91,7 +90,7 @@
                          to this school & its amazing staff & the amazing curriculum that engages all the children in the way
                          that is best for them. "
                     </p> 
-                    <p align="right"> - **********</p>
+                    <p align="right"> - Charlie Jacobs</p>
                </div>
              </div>
 
