--- a/html/achievements.html
+++ b/html/achievements.html
@@ -33,7 +33,7 @@
         <div class="result">
              <div class="quote">
              <h2>We advise you to make the right decision</h2><br>
-             <p>Here are just some of our achievements, and this is only the beggining...<br>We(with you) will make the world understand the capacity of autistic people 
+             <p style="color: rgb(167, 189, 169);">Here are just some of our achievements, and this is only the beggining...<br>We(with you) will make the world understand the capacity of autistic people 
           </p>
           <p style="font-style: italic;">Autistic today, genius tomorrow</p>
 </div>
@@ -59,7 +59,7 @@
 
         </div>
         <div class="InternationalAchievements">
-             <h2 style="text-align: center;">International Achievements of HELIOS school</h2>
+             <h2 style="text-align: center; color: rgb(254, 228, 100);">International Achievements of HELIOS school</h2>
              <br>
         <br>
         <img src="../images/collaborating.jpg" alt="Students from around the world" width="550" height="400">
@@ -78,7 +78,7 @@
           </ol>
      </li><br>
      <li>Helios International School is accredited with International School Award 2019-2022 for “Outstanding Development of International Dimension in the Curriculum by British Council.</li>
-<br><li>Chitkara International School (CIS) has always focused on investing in the future of children through programs that deck them with skills and tools. One of such initiatives was the exchange program titled “Partnership Between School”. This programme was a collaboration between Government Model Senior Secondary School, Dhanas and Chitkara International School. The discernible benefits of this collaboration included capacity building, sharing of ideas, innovative approach, etc. and the entire journey embarked upon resulted in a great learning and networking experience. This profuse association was applauded by Chandigarh Commission for Protection of Child Rights (CCPCR) at their event “National Consultation of UT’s on Creating Child-Friendly Cities” conducted on its 5th Foundation Day.</li>     
+<br><li>Helios has always focused on investing in the future of children through programs that deck them with skills and tools. One of such initiatives was the exchange program titled “Partnership Between School”. This programme was a collaboration between Government Model Senior Secondary School, Dhanas and Chitkara International School. The discernible benefits of this collaboration included capacity building, sharing of ideas, innovative approach, etc. and the entire journey embarked upon resulted in a great learning and networking experience. This profuse association was applauded by Chandigarh Commission for Protection of Child Rights (CCPCR) at their event “National Consultation of UT’s on Creating Child-Friendly Cities” conducted on its 5th Foundation Day.</li>     
 </ul>
      
 
@@ -88,9 +88,9 @@
  <hr>
  <div class="students">
       <div class="enter">
-      <h2>Students</h2>
+      <h2 style="color:rgb(254, 228, 100) ;">Students</h2>
       <br>
-      <p>Except the achievements as HELIOS School, a lot of students from our school have achieved big things internationally. Some of them are: </p>
+      <p >Except the achievements as HELIOS School, a lot of students from our school have achieved big things internationally. Some of them are: </p>
     </div> <div class="people">
 <div class="person">
      <img src="../images/person.png" style="width: 75px; height: 75px;">
@@ -106,7 +106,7 @@
      <h3>Suzanah Smith</h3>
      <h6>Mathematician</h6>
      <hr>
-     <p> Dua Shala, a student from our school has won a silver medal in EGMO 2021.
+     <p> Suzanah, a student from our school has won a silver medal in EGMO 2021.
           Dua now is studying mathematics in the Massachusets Institute of Technology(MIT) in USA with full schoolarship.
      </p>
 </div>
