--- a/html/apply.html
+++ b/html/apply.html
@@ -41,7 +41,7 @@
           <section class="contact">
               <div class="content">
                   <h2>Contact us</h2>
-                  <p>Feel free to make an appointment, or write your message below!</p>
+                  <p>Thank you for choosing our school!</p>
               </div>
               <div class="container">
                   <div class="contactInfo">
