--- a/html/curriculum.html
+++ b/html/curriculum.html
@@ -32,7 +32,7 @@
        <div class="body">
       <div class="wrapper"> 
           <div class="box2">
-               <h1 align="center">Curriculum</h1>
+               <h1 align="center" style=" color:rgb(254, 228, 100) ;">Curriculum</h1>
                <p>
                     The ultimate goal and purpose at Helios is to prepare its student population to emerge as independently as possible 
                     to meet the challenges of community life. Our curriculum is a customizable educational tool that adapts to the various 
@@ -58,7 +58,8 @@
      <div class="box3">
           
           <p>
-          <h3 align="center" bold> What are educational standards? </h3><br>
+               <br>
+          <h3 align="center" style=" color:rgb(254, 228, 100) ;" bold> What are educational standards? </h3><br>
 
           Educational standards are the learning goals for what students should know and be able to do at each grade level. 
           Education standards, like Common Core are not a curriculum. At Helios we use Houghton Mifflin Harcourt® for our 
@@ -73,7 +74,7 @@
           </p>
           <ul class="a">
                <li>English
-                    <ul><br>English is central to our curriculum at Helios School.</ul>
+                    <ul ><br>English is central to our curriculum at Helios School.</ul>
                </li><br>
                <li>Mathematics 
                     <ul> <br>At Helios, pupils are encouraged to develop fluency in the four mathematical operations through practice and repetition,
