--- a/html/parents.html
+++ b/html/parents.html
@@ -95,6 +95,8 @@
              </div>
 
         </div>
+        <img src="../images/parent.jpg" style="float: left;">
+        <div style="height:300px"><p style="font-size: 30px;color: yellow;">It's our priority to make your child feel warm </p></div>
 
 
 
