--- a/html/about.html
+++ b/html/about.html
@@ -59,8 +59,8 @@
                                    </blockquote>
                               </div>
                               <div class="intro-div" id="introduction">
-                                   <h1>About us</h1>
-                                   <p>
+                                   <h1 style="color: rgb(206, 229, 208);">About us</h1>
+                                   <p style="color: rgb(254, 228, 100);">
                                         Helios Autism School opened its doors in 2017 in <span id="place"></span>. We expanded our footprint with a second school in Fall 2017 in NYC.
                                         Our curriculum is a customizable educational tool that adapts to the various abilities of each student. It incorporates visual cues and teaching based on applied behavior analysis to facilitate the learning capability of our children and thus enhance results.
                                         <br>
@@ -130,12 +130,14 @@
                     </section>
                   
                     <hr>
+                    
+
 
                     <section class="tables-section">
                          <div class="members-div" id="team">
                               <table class="members-table">
                                    <tr>
-                                        <th colspan="3">Our Team</th>
+                                        <th colspan="3" style="color:rgb(206, 229, 208) ; font-size: 25px;">Our Team</th>
                                    </tr>
                                    <tr>
                                         <td>
