--- a/html/donate.html
+++ b/html/donate.html
@@ -32,8 +32,8 @@
          <div class="body">
           <section class="contact">
               <div class="content">
-                  <h2>Contact us</h2>
-                  <p>Feel free to make an appointment, or write your message below!</p>
+                  <h2>Write down your personal informations</h2>
+                  <p>With each donation we receive, we become all that much closer to our goal. Thank you for making a difference through your compassion and generosity.</p>
               </div>
               <div class="container">
                   <div class="contactInfo">
