--- a/html/index.html
+++ b/html/index.html
@@ -32,7 +32,7 @@
 
          <section>
               <div class="main-background-div">
-                   <img src="../images/main-background.PNG" alt="A child in school">
+                   <img src="../images/school.jpg" alt="A child in school">
               </div>
               <div class="offers-div">
                    <div>
@@ -89,7 +89,7 @@
          </section>
 
          <section class="academic-section">
-              <h1>Academic Network</h4>
+              <h1 style="color:white">Academic Network</h4>
               <table>
                    <tr>
                         <th colspan="3">
@@ -113,28 +113,28 @@
                <div class="goals-div">
                     <table class="goals-table">
                          <tr>
-                              <th colspan="3">Our goals</th>
+                              <th colspan="3" style="color: rgb(254, 228, 100);font-size: 25px;">Our goals</th>
                          </tr>
                          <tr>
                               <td>
                                    <div class="goal">
                                         <h3>Teaching</h3>
                                         <p>Improve the education of autistic children and young people.</p>  
-                                        <div class="read-button">Read more</div>
+                                        <div class="read-button"><a href="curriculum.html" style="color: white;">Read more</a></div>
                                    </div>
                               </td>
                               <td>
                                    <div class="goal">
                                         <h3>Socializing</h3>
                                         <p>Enable individuals to reach their potential and engage in society.</p>  
-                                        <div class="read-button">Read more</div>
+                                        <div class="read-button"><a href="curriculum.html" style="color: white;">Read more</a></div>
                                    </div>
                               </td>
                               <td>
                                    <div class="goal">
                                         <h3>Support</h3>
                                         <p>Support and inform education professionals.</p>  
-                                        <div class="read-button">Read more</div>
+                                        <div class="read-button"><a href="curriculum.html" style="color: white;">Read more</a></div>
                                    </div>
                               </td>
                          </tr>
@@ -143,21 +143,21 @@
                                    <div class="goal">
                                         <h3>Behaviour</h3>
                                         <p>Embedding positive attitudes towards neurodiversity.</p>  
-                                        <div class="read-button">Read more</div>
+                                        <div class="read-button"><a href="curriculum.html" style="color: white;">Read more</a></div>
                                    </div>
                               </td>
                               <td>
                                    <div class="goal">
                                         <h3>Comunication</h3>
                                         <p>Increasing social communication skills.</p>  
-                                        <div class="read-button">Read more</div>
+                                        <div class="read-button"><a href="curriculum.html" style="color: white;">Read more</a></div>
                                    </div>
                               </td>
                               <td>
                                    <div class="goal">
                                         <h3>Happiness</h3>
                                         <p>Achieving to put a smile on the faces of these children warms our hearts.</p>  
-                                        <div class="read-button">Read more</div>
+                                        <div class="read-button"><a href="curriculum.html" style="color: white;" >Read more</a></div>
                                    </div>
                               </td>
                          </tr>
