small css changes

--- a/html/index.html
+++ b/html/index.html
@@ -89,7 +89,7 @@
          </section>
 
          <section class="academic-section">
-              <h1 style="color:white">Academic Network</h4>
+              <h1 style="color:#829180">Academic Network</h4>
               <table>
                    <tr>
                         <th colspan="3">
