worked on about and some small changes on other menus

--- a/html/about.html
+++ b/html/about.html
@@ -189,6 +189,30 @@
                               </table>
                          </div>
                     </section>   
+                    <hr>
+                    <section class="school" align="center">
+                         <p style="font-size: 25px;"><b> Our School</b></p>
+                         <div class="photo">
+                              <img src="../images/ambient2.jpg" alt="photo of our school">
+                         </div>
+                         <div class="photo">
+                              <img src="../images/ambient3.jpg" alt="photo of our school">
+                         </div>
+                         <div class="photo">
+                              <img src="../images/ambient4.jpg" alt="photo of our school">
+                         </div>
+                         
+                         <div class="photo">
+                              <img src="../images/ambient8.jpg" alt="photo of our school">
+                         </div>
+                         <div class="photo">
+                              <img src="../images/ambient1.jpg" alt="photo of our school">
+                         </div>
+                         <div class="photo">
+                              <img src="../images/ambient9.jpg" alt="photo of our school">
+                         </div>
+
+                    </section>
                </div>
          </div>
        
