--- a/html/apply.html
+++ b/html/apply.html
@@ -89,7 +89,7 @@
                           <span class="Instructions">Full Name</span>
                       </div>
                       <div class="inputBox">
-                        <input type="date" name="" style="color: transparent;" required="required">
+                        <input type="date" name=""  style="color: transparent;" required="required">
                         <span class="Instructions">Birthday</span>
                     </div>
                       <div class="inputBox">
@@ -103,7 +103,7 @@
                     
                       <div class="inputBox">
                           <textarea required="required"></textarea>
-                          <span class="Instructions">Describe yourself/your child in three-six words</span>
+                          <span class="Instructions">Describe yourself/your child in two-five words</span>
                       </div>
                       <div>
                           <button type="button" id="open-dialog">Give additional information</button>
