--- a/html/donate.html
+++ b/html/donate.html
@@ -33,7 +33,7 @@
          <div class="body">
           <section class="contact">
               <div class="content">
-                  <h2>Write down your personal informations</h2>
+                  <h2>Please write down your personal informations!</h2>
                   <p>With each donation we receive, we become all that much closer to our goal. Thank you for making a difference through your compassion and generosity.</p>
               </div>
               <div class="container">
