worked in details on menu contact-apply

--- a/html/donate.html
+++ b/html/donate.html
@@ -86,6 +86,10 @@
                         <span class="Instructions">Email</span>
                     </div>
                     <div class="inputBox">
+                        <input type="number" name="" required="required">
+                        <span class="Instructions">Amount of money you donated</span>
+                    </div>
+                    <div class="inputBox">
                         <input type="password" name="" required="required">
                         <span class="Instructions">Account Number</span>
                     </div>
