--- a/html/about.html
+++ b/html/about.html
@@ -47,6 +47,11 @@
                                    <h5 class="stepper-title">Meet the team</h5>
                               </a>
                          </li>
+                         <li class="stepper-item">
+                              <a href="#school">
+                                   <h5 class="stepper-title">School sites</h5>
+                              </a>
+                         </li>
                     </ol>
                </div>
                <div class="data-container">
@@ -61,7 +66,7 @@
                               </div>
                               <div class="intro-div" id="introduction">
                                    <h1 style="color: rgb(206, 229, 208);">About us</h1>
-                                   <p style="color: rgb(254, 228, 100);">
+                                   <p style="color: rgb(248, 211, 30);">
                                         Helios Autism School opened its doors in 2017 in <span id="place"></span>. We expanded our footprint with a second school in Fall 2017 in NYC.
                                         Our curriculum is a customizable educational tool that adapts to the various abilities of each student. It incorporates visual cues and teaching based on applied behavior analysis to facilitate the learning capability of our children and thus enhance results.
                                         <br>
@@ -190,7 +195,7 @@
                          </div>
                     </section>   
                     <hr>
-                    <section class="school" align="center">
+                    <section class="school" align="center" id="school">
                          <p style="font-size: 25px;"><b> Our School</b></p>
                          <div class="photo">
                               <img src="../images/ambient2.jpg" alt="photo of our school">
@@ -215,7 +220,9 @@
                     </section>
                </div>
          </div>
-       
+
+         <hr>
+
          <footer id="footer">
               <!--jscode-->
          </footer>
